--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <li><a href="gallery.html">Gallery</a></li>
       <a href="#gallery">Gallery (Preview)</a>
       <li class="dropdown">
-
         <!-- Placeholder for Yvon to see if she likes dropd} -->
         <a href="#">Collections ▾</a> 
         <ul class="dropdown-content">
@@ -50,17 +49,19 @@
     <div class="gallery" id="gallery-images"></div>
   </section>
 
-
   <div id="modal" onclick="closeModal(event)">
-    <div class="modal-overlay-text">
-      <div id="modal-art-title"></div>
-      <div id="modal-art-status"></div>
-    </div>
     <div id="modal-content">
       <button id="modal-close" onclick="closeModal(event)">×</button>
+
+      <!-- image + overlay moved together -->
       <div class="modal-image-wrapper">
         <img id="modal-img" src="" alt="Zoomed Art" />
+        <div class="modal-overlay-text">
+          <div id="modal-art-title"></div>
+          <div id="modal-art-status"></div>
+        </div>
       </div>
+
       <div class="modal-form-container">
         <h3 class="form-title">Inquire About This Piece</h3>
         <!-- Using my email, replace with yvon. Can also make it a string to keep email hidden -->
@@ -111,39 +112,41 @@
   </section>
 
   <script>
-    const tabs      = document.querySelectorAll('.collection-tab');
-    const gallery   = document.getElementById('gallery-images');
-    const modal     = document.getElementById('modal');
-    const modalImg  = document.getElementById('modal-img');
-    const formArt   = document.getElementById('form-art-title');
+    const tabs = document.querySelectorAll('.collection-tab');
+    const gallery = document.getElementById('gallery-images');
+    const modal = document.getElementById('modal');
+    const modalImg = document.getElementById('modal-img');
+    const formArtTitle = document.getElementById('form-art-title');
     const description = document.getElementById('collection-description');
 
-    function setActiveTab(tab) {
-      tabs.forEach(t => t.classList.remove('active'));
-      tab.classList.add('active');
+    function setActiveTab(selectedTab) {
+      tabs.forEach(tab => tab.classList.remove('active'));
+      selectedTab.classList.add('active');
     }
 
     function loadCollection(collection) {
       fetch(`collections/${collection}.json`)
-        .then(r => r.json())
+        .then(res => res.json())
         .then(data => {
           gallery.innerHTML = '';
           description.textContent = data.description || '';
-          (data.artworks||data).forEach(art => {
+          (data.artworks || data).forEach(art => {
             const div = document.createElement('div');
             div.className = 'art-piece';
             div.innerHTML = `
-              <img
-                src="images/${art.filename}"
-                alt="${art.title}"
-                onclick="openModal(event,'${art.filename}','${art.title}','${art.status}')"
+              <img 
+                src="images/${art.filename}" 
+                alt="${art.title}" 
+                onclick="openModal(event, '${art.filename}', '${art.title}', '${art.status}')"
               />
               <p class="caption">"${art.title}" — ${art.status}</p>
             `;
             gallery.appendChild(div);
           });
         })
-        .catch(_=> gallery.innerHTML = '<p style="color:red;">Error loading collection.</p>');
+        .catch(err => {
+          gallery.innerHTML = '<p style="color: red;">Error loading collection.</p>';
+        });
     }
 
     tabs.forEach(tab => {
@@ -153,205 +156,263 @@
       });
     });
 
-    function openModal(e, filename, title, status) {
-      e.stopPropagation();
+    function openModal(event, filename, title, status) {
+      event.stopPropagation();
       modal.style.display = 'flex';
-      modalImg.src        = `images/${filename}`;
-      formArt.value       = title;
-      document.getElementById('modal-art-title').textContent  = title;
-      document.getElementById('modal-art-status').textContent = status;
+      modalImg.src = `images/${filename}`;
+      formArtTitle.value = title;
+      document.getElementById("modal-art-title").textContent = title;
+      document.getElementById("modal-art-status").textContent = status;
     }
 
-    function closeModal(e) {
-      const mc = document.getElementById('modal-content');
-      const r  = mc.getBoundingClientRect();
-      const buf= 10;
-      if (
-        e.clientX < r.left - buf ||
-        e.clientX > r.right + buf ||
-        e.clientY < r.top - buf ||
-        e.clientY > r.bottom + buf
-      ) modal.style.display = 'none';
+    function closeModal(event) {
+      const modalContent = document.getElementById('modal-content');
+      const rect = modalContent.getBoundingClientRect();
+      const buffer = 10;
+      const inside = (
+        event.clientX > rect.left - buffer &&
+        event.clientX < rect.right + buffer &&
+        event.clientY > rect.top - buffer &&
+        event.clientY < rect.bottom + buffer
+      );
+      if (!inside) modal.style.display = 'none';
     }
 
-    function handleSubmit(e) {
-      e.preventDefault();
+    function handleSubmit(event) {
+      event.preventDefault();
+      const form = event.target;
       setTimeout(() => {
-        e.target.submit();
+        form.submit();
         modal.style.display = 'none';
-        e.target.reset();
+        form.reset();
         showToast();
       }, 100);
     }
 
     function showToast() {
-      const t = document.getElementById('toast');
-      t.classList.add('show');
-      setTimeout(()=> t.classList.remove('show'), 4000);
+      const toast = document.getElementById('toast');
+      toast.classList.add('show');
+      setTimeout(() => toast.classList.remove('show'), 4000);
     }
 
     loadCollection('portraits');
   </script>
 
+<!-- testing one-pager. Remove later -->
   <style>
-    /* Base reset & fonts */
     body {
-      background:#111; color:#eee;
-      margin:0; padding:0;
-      font:1.3rem 'Cormorant Garamond', serif;
+      background-color: #111;
+      color: #eee;
+      font-family: 'Helvetica Neue', sans-serif;
+      font-size: 1.3rem;
+      margin: 0;
+      padding: 0;
     }
-    a, button, input, textarea { font-family:inherit; }
+
+    /* FONTS */
 
     /* Titles */
-    h1,h2,h3,.hero-text h1,.form-title {
-      font-family:'Playfair Display', serif;
-      margin:0;
-    }
-    h1 { font-size:2.7rem; }
-    h2 { font-size:2rem; }
-    h3 { font-size:1.5rem; }
-
-    nav { background:#000; padding:1rem; text-align:center; }
-    nav ul{ list-style:none; margin:0; padding:0; display:inline-flex; gap:2rem; }
-    nav a{ color:#eee; text-decoration:none; font-weight:bold; }
-
-    .hero-header { position:relative; width:100%; aspect-ratio:4/3; overflow:hidden; }
-    .hero-bg {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;      /* you already have this */
-      object-position: center; /* ← add this */
-      z-index: 1;
-    }
-    .hero-text {
-      position:relative; z-index:2;
-      text-align:center; color:#fff;
-      background:rgba(0,0,0,0.4);
-      padding:2rem 1rem;
+    h1, h2, h3, .hero-text h1, .form-title {
+      font-family: 'Playfair Display', serif;
     }
 
-    .collections-section { padding:1rem 0 0; }
-    .collections-section h2 { margin-bottom:.5rem; padding-left:1.5rem; }
+    /* force Collections heading to title font */
+    .collections-section h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+      padding-left: 1.5rem;
+    }
+
+    /* Body text */
+    body, p, label, input, textarea, .collection-description, .caption {
+      font-family: 'Cormorant Garamond', serif;
+    }
+
+    h1 { font-size: 2.7rem; }
+    h2 { font-size: 2rem; }
+    h3 { font-size: 1.5rem; }
+    label, input, textarea, button { font-size: 1rem; }
 
     .collections-bar {
-      display:flex; height:2.8rem;
-      background:#222; position:relative;
-      overflow-x:auto; scrollbar-width:none;
+      height: 2.8rem;
+      display: flex;
+      overflow-x: auto;
+      white-space: nowrap;
+      background-color: #222;
+      scrollbar-width: none;
+      position: relative;
+      padding: 0;
     }
-    .collections-bar::-webkit-scrollbar { display:none; }
+    .collections-bar::-webkit-scrollbar { display: none; }
     .collections-bar::before,
     .collections-bar::after {
-      content:""; position:absolute; top:0; bottom:0; width:1rem; z-index:1;
-      pointer-events:none;
+      content: "";
+      position: absolute;
+      top: 0; bottom: 0; width: 1rem;
+      z-index: 1; pointer-events: none;
     }
     .collections-bar::before {
-      left:0; background:linear-gradient(to right,#111,transparent);
+      left: 0; background: linear-gradient(to right, #111, transparent);
     }
     .collections-bar::after {
-      right:0; background:linear-gradient(to left,#111,transparent);
+      right: 0; background: linear-gradient(to left, #111, transparent);
     }
 
     .collection-tab {
-      flex-shrink:0; display:flex; align-items:center; justify-content:center;
-      padding:0 1.2rem; margin:0;
-      border-left:1px solid #555; border-right:1px solid #555;
-      background:#222; color:#bbb; cursor:pointer;
-      transition:background .3s; box-sizing:border-box; height:100%;
+      display: flex; align-items: center; justify-content: center;
+      color: #bbb; background-color: #222;
+      border-left: 1px solid #555; border-right: 1px solid #555;
+      margin: 0; cursor: pointer; transition: background-color 0.3s;
+      flex-shrink: 0; height: 100%; box-sizing: border-box;
+      padding: 0 1.2rem;
     }
-    .collection-tab:first-child { border-left:none; }
-    .collection-tab:last-child  { border-right:none; }
-    .collection-tab.active      { background:#444; color:#fff; }
-    .collection-tab:hover       { background:#333; }
+    .collection-tab:first-child { border-left: none; }
+    .collection-tab:last-child { border-right: none; }
+    .collection-tab.active { background-color: #444; color: #fff; }
+    .collection-tab:hover { background-color: #333; }
 
-    .collection-description,
-    .right-padded { padding-left:1.5rem; }
+    .collection-description { padding-left: 1.5rem; }
 
     .gallery {
-      display:flex; flex-wrap:wrap; justify-content:center;
-      gap:1rem; padding:2rem 1rem;
+      display: flex; flex-wrap: wrap; justify-content: center;
+      gap: 1rem; padding: 2rem 1rem;
     }
+
     .art-piece img {
-      height:200px; object-fit:cover;
-      border:2px solid #444; cursor:pointer;
-      transition:transform .3s ease;
+      height: 200px; object-fit: cover;
+      cursor: pointer; border: 2px solid #444;
+      transition: transform 0.3s ease;
     }
-    .art-piece img:hover { transform:scale(1.05); }
+    .art-piece img:hover { transform: scale(1.05); }
+
     .caption {
-      text-align:center; margin-top:.5rem;
-      color:#bbb; font-style:italic; font-size:.9rem;
+      text-align: center; margin-top: 0.5rem;
+      color: #bbb; font-style: italic; font-size: 0.9rem;
     }
 
     #modal {
-      position:fixed; inset:0;
-      background:rgba(0,0,0,.9);
-      display:none; justify-content:center; align-items:center;
-      z-index:10;
+      position: fixed; display: none;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.9);
+      justify-content: center; align-items: center;
+      flex-direction: column; z-index: 10;
     }
-    #modal-close {
-      position:absolute; top:1rem; right:1rem;
-      background:transparent; border:none; color:#fff;
-      font-size:2rem; cursor:pointer; z-index:12;
-    }
+
     #modal-content {
-      position:relative;
-      display:flex; gap:2rem; max-width:90%; flex-wrap:wrap;
-      align-items:flex-start; justify-content:center;
+      display: flex; flex-direction: row;
+      align-items: flex-start; gap: 2rem;
+      max-width: 90%; flex-wrap: wrap;
+      justify-content: center;
+      position: relative; /* for close button & overlay */
     }
+
+    #modal-close {
+      position: absolute; top: 15px; right: 10px;
+      font-size: 2rem; color: white;
+      background: transparent; border: none;
+      cursor: pointer; z-index: 11;
+    }
+    #modal-close:hover { color: #ccc; }
+
     .modal-image-wrapper {
-      position:relative; max-width:100%;
+      position: relative; display: inline-block;
+      width: fit-content; max-width: 100%;
     }
     .modal-image-wrapper img {
-      display:block; width:100%; height:auto;
-      border:3px solid #fff;
+      display: block; width: 100%; height: auto;
+      border: 3px solid white;
     }
     .modal-overlay-text {
-      position:absolute; top:1rem; left:50%;
-      transform:translateX(-50%);
-      text-align:center; color:#fff;
-      z-index:11; pointer-events:none;
+      position: absolute; top: 1rem; left: 50%;
+      transform: translateX(-50%); text-align: center;
+      color: white; z-index: 2; pointer-events: none;
     }
-    #modal-art-title { font-size:1.5rem; font-weight:700; }
-    #modal-art-status{ font-style:italic; opacity:.85; }
+    #modal-art-title {
+      font-size: 1.5rem; font-weight: bold; margin-bottom: 0.25rem;
+    }
+    #modal-art-status {
+      font-size: 1rem; font-style: italic; opacity: 0.85;
+    }
 
     .modal-form-container {
-      display:flex; flex-direction:column; gap:.5rem;
-      max-width:300px; color:#fff;
+      display: flex; flex-direction: column; gap: 0.5rem;
+      max-width: 300px; color: white;
     }
     .modal-form-container label {
-      display:flex; flex-direction:column; font-size:1rem;
+      display: flex; flex-direction: column; font-size: 0.9rem;
     }
     .modal-form-container input,
     .modal-form-container textarea {
-      margin-top:.3rem; padding:.4rem;
-      background:#222; border:1px solid #555;
-      color:#fff; border-radius:4px; font-size:1rem;
+      margin-top: 0.3rem; padding: 0.4rem;
+      background: #222; border: 1px solid #555;
+      color: white; border-radius: 4px; font-size: 0.9rem;
     }
     .modal-form-container button {
-      padding:.5rem 1rem; background:#444; color:#fff;
-      border:none; border-radius:4px; cursor:pointer; font-size:1rem;
+      background-color: #444; color: white;
+      border: none; padding: 0.5rem; margin-top: 0.5rem;
+      border-radius: 4px; cursor: pointer; font-size: 0.95rem;
     }
-    .modal-form-container button:hover { background:#666; }
+    .modal-form-container button:hover {
+      background-color: #666;
+    }
+
+    .inquiry-button {
+      padding: 0.5rem 1rem; background-color: #444;
+      color: #fff; border: none; border-radius: 5px;
+      cursor: pointer; font-size: 1rem;
+    }
+    .inquiry-button:hover { background-color: #666; }
+
+    .form-title {
+      margin: 0.5rem 0; color: white;
+      font-size: 1.2rem; text-align: center;
+    }
 
     .toast {
-      position:fixed; left:50%; bottom:40%;
-      transform:translateX(-50%);
-      background:#333; color:#fff; padding:1rem;
-      border-radius:8px; visibility:hidden; opacity:0;
-      transition:opacity .5s,visibility .5s;
-      z-index:999;
+      visibility: hidden; min-width: 250px;
+      background-color: #333; color: #fff;
+      text-align: center; border-radius: 8px;
+      padding: 1rem; position: fixed;
+      bottom: 40%; left: 50%;
+      transform: translateX(-50%); z-index: 999;
+      font-size: 1rem; opacity: 0;
+      transition: opacity 0.5s, visibility 0.5s;
     }
     .toast.show {
-      visibility:visible; opacity:1;
+      visibility: visible; opacity: 1;
     }
 
-    @media (max-width:768px) {
-      #modal-content { flex-direction:column; align-items:center; }
-      .modal-form-container { width:90%; }
+    .right-padded { padding-left: 1.5rem; }
+
+    .hero-header {
+      position: relative; width: 100%;
+      overflow: hidden; aspect-ratio: 4 / 3;
+    }
+    .hero-bg {
+      position: absolute; width: 100%; height: 100%;
+      object-fit: cover; top: 0; left: 0; z-index: 1;
+    }
+    .hero-text {
+      position: relative; z-index: 2;
+      text-align: center; color: white;
+      padding: 2rem 1rem; font-size: 1.2rem;
+      background: rgba(0, 0, 0, 0.4);
+    }
+    .hero-text h1 { margin: 0; font-size: 2.5rem; }
+    .hero-text p {
+      margin: 0.5rem 0 0; font-size: 1.1rem;
+    }
+
+    @media (max-width: 768px) {
+      #modal-content {
+        flex-direction: column; align-items: center;
+      }
+      .modal-form-container { width: 90%; }
     }
   </style>
 
 </body>
 </html>
+
 
